--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
 body{
   background: #3494e6;
   height: 100vh;
-  overflow-y: hidden;
   margin: 2rem;
   font-family: sans-serif;
+}
+
+.item{
+  background: rgba(255, 255, 255, 0.6);
+  border-radius: 5px;
+  border: 1px solid #000;
+}
+
+
+.container{
+  display: grid;
+  grid-template-columns: 200px 200px;
+  grid-template-rows: 200px 200px;
 }
