--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ body{
 .item{
   background: rgba(255, 255, 255, 0.6);
   border-radius: 5px;
+  height: 30px;
 }
 
 
 .container{
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 200px 200px;
+  grid-auto-flow: column;
   grid-gap: 1rem;
 }
