--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ body{
 .item{
   background: rgba(255, 255, 255, 0.6);
   border-radius: 5px;
-  height: 30px;
 }
 
 
 .container{
   display: grid;
-  grid-auto-flow: column;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: 30px;
   grid-gap: 1rem;
 }
