--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body{
 
 .container{
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: 30px;
+  grid-auto-columns: 1fr;
+  grid-auto-rows: 100px;
+  grid-template-rows: repeat(5, 100px );
   grid-gap: 1rem;
 }
