--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@ body{
 
 .container{
   display: grid;
-  grid-auto-columns: 1fr;
-  grid-auto-rows: 100px;
-  grid-template-rows: repeat(5, 100px );
+  grid-template-columns: 900px;
+  grid-template-rows: 200px;
   grid-gap: 1rem;
 }
